# cuda-rentsense-knn

./: .gitignore  CMakeLists.txt  README.md
data/: prepare_dataset.py
include/: dataset.hpp  knn_cpu.hpp  knn_cuda.cuh  metrics.hpp  timer.hpp
scripts/: plot_results.py  profile_ncu.sh  profile_nsys.sh  run_bench.sh
src/: dataset.cpp  knn_cpu.cpp  knn_cuda.cu  main.cpp
